--- a/videos.html
+++ b/videos.html
@@ -80,15 +80,15 @@
     <section id="videos" class="video">
         <div class="content">
             <h2>Vídeos</h2>
-            <p>Abaixo, você pode assistir nossa Reflexão Espírita sobre o tema Amizade:</p>
+            <p>Abaixo, você pode assistir algumas de nossas reflexões:</p>
             <div class="video-container">
                 <p><strong>Vídeo 1:</strong> Reflexão sobre a importância da amizade.</p>
                 <iframe src="https://www.youtube.com/embed/sFZrNjiuED0?si=fKK3ROFVhF7SEtel" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-                <p><strong>Vídeo 2:</strong> Como cultivar amizades verdadeiras.</p>
+                <p><strong>Vídeo 2:</strong> Reflexão sobre reencarnação.</p>
                 <iframe src="https://www.youtube.com/embed/hBAbtJdnuyM?si=pOzaxqYkULnmxO3w" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
 
-                <p><strong>Vídeo 3:</strong> Amizade e espiritualidade.</p>
+                <p><strong>Vídeo 3:</strong> Reflexão sobre alma gêmea.</p>
                 <iframe src="https://www.youtube.com/embed/WqP5J461C24?si=JY34UZL4UCHAaWck" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
