--- a/redes-sociais.html
+++ b/redes-sociais.html
@@ -5,28 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Redes Sociais - mundo.espirita</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
+        /* Inclua o mesmo estilo do arquivo index.html */
         body {
             font-family: Arial, sans-serif;
-            background-color: #b0e0e6; /* Azul claro */
-            color: black; /* Texto em preto para melhor legibilidade */
+            background-color: #f0f0f0; /* Fundo leve para a página */
+            color: black;
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #add8e6; /* Azul claro (Light Blue) */
+            background-color: rgba(176, 224, 230, 0.8); /* Azul claro com opacidade */
             padding: 20px;
             text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
         }
         nav {
             display: flex;
             justify-content: center;
-            background-color: #add8e6; /* Azul claro (Light Blue) */
+            background-color: rgba(176, 224, 230, 0.8); /* Azul claro com opacidade */
             padding: 10px 0;
         }
         nav a {
@@ -37,31 +33,27 @@
         }
         section {
             padding: 20px;
+            text-align: center; /* Centraliza o texto da seção */
         }
-        .content {
-            max-width: 800px;
-            margin: 0 auto;
+        .social-links {
+            margin-top: 20px;
         }
-        footer {
-            background-color: #add8e6; /* Azul claro (Light Blue) */
-            padding: 20px;
-            text-align: center;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-        footer a {
-            color: black; /* Texto em preto */
-            text-decoration: none;
+        .social-links a {
             margin: 0 10px;
-            font-size: 1.5em; /* Tamanho dos ícones */
+            font-size: 2em; /* Tamanho dos ícones */
+            text-decoration: none; /* Remove o sublinhado */
+            color: black; /* Cor dos ícones */
+        }
+        .social-links span {
+            margin-left: 5px; /* Espaço entre o ícone e o texto */
+            font-size: 1.2em; /* Tamanho do texto */
         }
     </style>
 </head>
 <body>
 
     <header>
-        <h1>mundo.espirita</h1>
+        <h1>Mundo Espírita</h1>
     </header>
 
     <nav>
@@ -76,18 +68,15 @@
             <h2>Redes Sociais</h2>
             <p>Siga-me nas redes sociais e acompanhe todas as atualizações e novos conteúdos:</p>
             <div class="social-links">
-                <a href="https://www.instagram.com/seuperfil" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.youtube.com/@_mundo_espirita" target="_blank"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.instagram.com/seuperfil" target="_blank"><i class="fab fa-instagram"></i><span>Instagram</span></a>
+                <a href="https://www.youtube.com/@_mundo_espirita" target="_blank"><i class="fab fa-youtube"></i><span>YouTube</span></a>
             </div>
-            <p>Email: mundoespirita00@gmail.com</p> <!-- Exibir o e-mail sem link -->
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 mundo.espirita. Todos os direitos reservados.</p>
+        <p>&copy; 2024 mundo espírita. Todos os direitos reservados.</p>
     </footer>
 
 </body>
 </html>
-
-
