--- a/textos.html
+++ b/textos.html
@@ -88,7 +88,7 @@
 <body>
 
     <header>
-        <h1>mundo.espirita</h1>
+        <h1>Mundo Espírita</h1>
     </header>
 
     <nav>
@@ -133,5 +133,4 @@
 
 </body>
 </html>
-
 
