--- a/textos.html
+++ b/textos.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #00FFFF; /* Cor de fundo azul ciano */
+            background-color: white; /* Cor de fundo branco */
             color: black; /* Texto em preto para melhor legibilidade */
             margin: 0;
             padding: 0;
