--- a/textos.html
+++ b/textos.html
@@ -123,6 +123,11 @@
                     <p>Em produção.</p>
                 </div>
             </div>
+            <div class="accordion">
+                <div class="accordion-title" onclick="toggleAccordion('texto4')">Perdão</div>
+                <div class="accordion-content" id="texto4">
+                    <p>Em produção.</p>
+                </div>
 
         </div>
     </section>
