--- a/textos.html
+++ b/textos.html
@@ -126,7 +126,31 @@
             <div class="accordion">
                 <div class="accordion-title" onclick="toggleAccordion('texto4')">Perdão</div>
                 <div class="accordion-content" id="texto4">
-                    <p>Em produção.</p>
+                    <p>O Perdão no Evangelho de Jesus
+Então, Pedro chegou perto de Jesus e perguntou:
+— Senhor, quantas vezes devo perdoar o meu irmão que peca contra mim? Sete vezes?
+— Não! — respondeu Jesus. — Você não deve perdoar sete vezes, mas setenta e sete vezes.
+Esse ensinamento, extraído dos Evangelhos, é um dos mais poderosos convites ao perdão que Jesus nos oferece. Ele não estabelece limites para a prática do perdão, nos mostrando que o verdadeiro caminho da evolução espiritual está na capacidade de perdoar infinitamente.
+A Visão Espírita sobre o Perdão
+Chico Xavier, em sua profunda sabedoria, disse:
+"No meu ponto de vista, a virtude mais difícil de ser posta em prática é a do perdão; perdoar exige um esforço de autossuperação muito grande."
+Essa reflexão revela a complexidade do perdão, uma prática que nos desafia a vencer o ego e a mágoa para alcançarmos a verdadeira paz interior. No Livro dos Espíritos, aprendemos que amar os inimigos significa perdoá-los e retribuir o mal com o bem. Agindo assim, nos elevamos espiritualmente, enquanto a vingança nos coloca numa posição inferior, alimentando o orgulho.
+Existem, no entanto, duas maneiras distintas de perdoar:
+A primeira, genuinamente generosa, evita ferir o outro e é feita com humildade e sinceridade. A segunda é condicional e carregada de orgulho, onde o perdão é oferecido de forma ostensiva, para que todos vejam a "generosidade" de quem perdoa. Nesse segundo caso, o perdão não traz a verdadeira reconciliação, pois falta nele a nobreza de espírito.
+A Relevância do Perdão nas Reencarnações
+Segundo o Evangelho Segundo o Espiritismo, nossas reencarnações estão ligadas ao que ainda não foi resolvido. Muitas vezes, os Espíritos vingativos seguem carregando ódio e rancor mesmo após a morte, buscando vingança contra aqueles que consideram inimigos.
+Esse é o motivo pelo qual Jesus nos aconselha a nos reconciliarmos com nossos adversários enquanto estamos vivos. Ele sabia que a morte não dissolve o ódio. Um inimigo na Terra pode se tornar um amigo no mundo espiritual, se o perdão for praticado com sinceridade e humildade. Perdoar agora é garantir paz não só nesta vida, mas também nas futuras.
+Praticando o Perdão no Dia a Dia
+Na questão 918 do Livro dos Espíritos, Kardec destaca as características do homem de bem, dentre elas, o perdão incondicional, a exemplo de Jesus, que perdoava as ofensas e se concentrava apenas nas boas ações. No livro Perdão e Vida, encontramos um conselho poderoso:
+"Sempre que o mal te visite, pede a Deus te conceda a coragem de perdoar."
+O perdão, segundo o Espiritismo, não é um ato de fraqueza, mas uma verdadeira manifestação de força interior. É por meio do perdão que rompemos as correntes do ódio e abrimos espaço para a cura e a reconciliação, tanto nesta vida quanto nas próximas. Jesus nos lembra:
+"Porque se vocês perdoarem as pessoas que ofenderem vocês, o Pai de vocês, que está no céu, também perdoará vocês. Mas, se não perdoarem essas pessoas, o Pai de vocês também não perdoará as ofensas de vocês."
+Portanto, devemos refletir: se somos duros e inflexíveis diante das ofensas, como podemos esperar o perdão divino? A prática constante do perdão é essencial para nossa evolução espiritual.
+Conclusão: O Perdão como Caminho para a Paz
+Vemos que o perdão é uma chave essencial para nossa libertação espiritual. Não se trata apenas de libertar o outro, mas de nos livrarmos de ressentimentos que nos aprisionam e impedem nosso progresso. Quando Jesus nos convida a perdoar "setenta vezes sete", Ele nos chama a uma prática constante de indulgência, amor e compreensão.
+Perdoar é, de fato, um ato de força, e ao fazê-lo, nos aproximamos de Deus e da verdadeira paz interior. Que possamos, em nossa jornada, escolher o perdão como caminho para a nossa redenção e para a harmonia universal. Afinal, foi com o perdão que Jesus nos deu o maior exemplo de amor, até mesmo na cruz. E que, com esse exemplo, possamos transformar nossas relações e, principalmente, nossa alma.
+
+</p>
                 </div>
 
         </div>
