--- a/amizade.html
+++ b/amizade.html
@@ -36,41 +36,46 @@
     <h1>Os Laços da Amizade no Espiritismo</h1>
     <p>
 
-Hoje vamos refletir sobre os laços, sejam eles antigos ou recentes, que unem diferentes espíritos e nos conduzem à felicidade. Qual o verdadeiro papel da amizade em nossas vidas espirituais?
+   <p>Hoje vamos refletir sobre os laços, sejam eles antigos ou recentes, que unem diferentes espíritos e nos conduzem à felicidade. Qual o verdadeiro papel da amizade em nossas vidas espirituais?
 
-Em Provérbios 17:17, lemos que “O amigo ama em todos os momentos, mas na adversidade nasce um irmão”.
+Em Provérbios 17:17, lemos que “O amigo ama em todos os momentos, mas na adversidade nasce um irmão”.   </p>
 
-O Livro dos Espíritos nos oferece um valioso ensinamento sobre a importância de ter um amigo. Nele, encontramos a afirmativa: "Deus não nos impõe tarefa superior às nossas forças e que ele não nos deixou sozinhos na Terra, sem amigos e sem amparo".
+   <p>O Livro dos Espíritos nos oferece um valioso ensinamento sobre a importância de ter um amigo. Nele, encontramos a afirmativa: "Deus não nos impõe tarefa superior às nossas forças e que ele não nos deixou sozinhos na Terra, sem amigos e sem amparo".
 
 Como bem disse Emmanuel no livro Antologia da Amizade, psicografado por Chico Xavier: “Somos todos irmãos ante a Providência Divina, interligados no trabalho do dia-a-dia em função de nosso aperfeiçoamento mútuo”. Essas palavras nos lembram que os amigos, mais do que companheiros temporais, são parceiros de jornada evolutiva.
+   </p>
 
 Laços que Transcendem Vidas
-Durante nossa breve passagem pela Terra, encontramos diversas almas. Algumas são conhecidas e outras não, mas algumas dessas almas tornam-se nossos amigos. Um amigo pode ter estado conosco em várias encarnações, talvez até como um antigo desafeto. O espiritismo nos ensina que a morte apenas rompe temporariamente os laços afetivos. Quando os espíritos retornam ao plano espiritual, reencontram-se como amigos que voltaram de uma longa viagem.
+
+   <p>Durante nossa breve passagem pela Terra, encontramos diversas almas. Algumas são conhecidas e outras não, mas algumas dessas almas tornam-se nossos amigos. Um amigo pode ter estado conosco em várias encarnações, talvez até como um antigo desafeto. O espiritismo nos ensina que a morte apenas rompe temporariamente os laços afetivos. Quando os espíritos retornam ao plano espiritual, reencontram-se como amigos que voltaram de uma longa viagem.
 
 É comum, em relatos espíritas, ouvirmos sobre pessoas que sonham com parentes ou amigos desencarnados, que lhes trazem avisos ou conselhos. Nossos amigos no plano espiritual continuam a nos proteger, dentro das possibilidades que lhes são permitidas.
 
-De acordo com Emmanuel, no livro O Consolador (pergunta 174), “a amizade sincera é o oásis de repouso para o caminheiro da vida, em sua jornada de aperfeiçoamento.”
+De acordo com Emmanuel, no livro O Consolador (pergunta 174), “a amizade sincera é o oásis de repouso para o caminheiro da vida, em sua jornada de aperfeiçoamento.”   </p>
 
-A Importância do Perdão nos Relacionamentos
-Em relação à amizade, também precisamos compreender que ela envolve compreensão e perdão. No livro O Livro dos Espíritos, na questão 290, é explicado que amigos e parentes podem se reencontrar após a morte, mas isso depende de sua evolução espiritual. Se um espírito avançar mais rapidamente, pode haver um distanciamento temporário. Contudo, eventualmente, todos os laços se restabelecem quando ambos alcançam o mesmo nível evolutivo.
+   <p>A Importância do Perdão nos Relacionamentos   </p>
+   <p>Em relação à amizade, também precisamos compreender que ela envolve compreensão e perdão. No livro O Livro dos Espíritos, na questão 290, é explicado que amigos e parentes podem se reencontrar após a morte, mas isso depende de sua evolução espiritual. Se um espírito avançar mais rapidamente, pode haver um distanciamento temporário. Contudo, eventualmente, todos os laços se restabelecem quando ambos alcançam o mesmo nível evolutivo.
 
 O Evangelho segundo o Espiritismo nos ensina que é muito mais agradável estar com um amigo do que com um inimigo. E isso é algo que vivemos diariamente. Se não estivermos no caminho do perdão, antigos desafetos podem trazer grandes desafios para nossa caminhada.
 
 Jesus nos aconselhou a nos reconciliarmos rapidamente com nossos adversários, e esse conselho vale não só para esta vida, mas para as futuras encarnações. Resolver nossos conflitos é essencial para evitar que eles se repitam em novas vidas.
+   </p>
 
-Amizades que se Transformam
-Com o passar do tempo, amizades podem se transformar. Melhores amigos de hoje podem se tornar apenas conhecidos amanhã. O grupo de 10 amigos pode se reduzir a 5, e 5 podem se transformar em 2. Se não cultivarmos nossas amizades, corremos o risco de nos deparar com a solidão.
+
+   <p>Amizades que se Transformam   </p>
+   <p>Com o passar do tempo, amizades podem se transformar. Melhores amigos de hoje podem se tornar apenas conhecidos amanhã. O grupo de 10 amigos pode se reduzir a 5, e 5 podem se transformar em 2. Se não cultivarmos nossas amizades, corremos o risco de nos deparar com a solidão.
 
 Em Toques da Vida, Cornélio Pires, por meio da psicografia de Chico Xavier, nos aconselha sabiamente: “Num grupo de bons amigos, se algum deles te magoa, esquece em favor dos outros, entrega a Deus e perdoa”.
+   </p>
 
-O Cultivo da Amizade Verdadeira
-No livro Sinal Verde, André Luiz, também através de Chico Xavier, nos diz: “O amigo é uma bênção que nos cabe cultivar no clima da gratidão. Quem diz que ama e não procura compreender, auxiliar, amparar ou servir, ainda não saiu de si mesmo ao encontro do amor em alguém.”
+   <p>O Cultivo da Amizade Verdadeira   </p>
+   <p>No livro Sinal Verde, André Luiz, também através de Chico Xavier, nos diz: “O amigo é uma bênção que nos cabe cultivar no clima da gratidão. Quem diz que ama e não procura compreender, auxiliar, amparar ou servir, ainda não saiu de si mesmo ao encontro do amor em alguém.”
 
 A verdadeira amizade enxerga além dos defeitos. Amar o amigo é aceitar suas imperfeições e continuar a caminhada juntos. Somente vencemos o egoísmo em nós quando nos decidimos a ajudar nossos amigos a encontrar sua própria felicidade, independentemente de nossas expectativas.
 
 Precisamos reconhecer que nossos amigos têm seus próprios pensamentos e que suas escolhas não precisam ser iguais às nossas. A verdadeira felicidade na amizade reside no bem-estar daqueles que amamos. Assim como esperamos ser aceitos como somos, devemos aceitar nossos amigos do jeito que são.
 
-Conforme Jesus nos ensinou a amar até mesmo nossos inimigos, quanto mais amor devemos oferecer aos que nos entregam o coração?
+Conforme Jesus nos ensinou a amar até mesmo nossos inimigos, quanto mais amor devemos oferecer aos que nos entregam o coração?   </p>
     </p>
 
     <footer>
