--- a/amizade.html
+++ b/amizade.html
@@ -43,39 +43,39 @@
 
     <p>Hoje vamos refletir sobre os laços, sejam eles antigos ou recentes, que unem diferentes espíritos e nos conduzem à felicidade. Qual o verdadeiro papel da amizade em nossas vidas espirituais?
 
-Em Provérbios 17:17, lemos que “O amigo ama em todos os momentos, mas na adversidade nasce um irmão”.
+    Em Provérbios 17:17, lemos que “O amigo ama em todos os momentos, mas na adversidade nasce um irmão”.</p>
 
-O Livro dos Espíritos nos oferece um valioso ensinamento sobre a importância de ter um amigo. Nele, encontramos a afirmativa: "Deus não nos impõe tarefa superior às nossas forças e que ele não nos deixou sozinhos na Terra, sem amigos e sem amparo".
+    <p>O Livro dos Espíritos nos oferece um valioso ensinamento sobre a importância de ter um amigo. Nele, encontramos a afirmativa: "Deus não nos impõe tarefa superior às nossas forças e que ele não nos deixou sozinhos na Terra, sem amigos e sem amparo".</p>
 
-Como bem disse Emmanuel no livro Antologia da Amizade, psicografado por Chico Xavier: “Somos todos irmãos ante a Providência Divina, interligados no trabalho do dia-a-dia em função de nosso aperfeiçoamento mútuo”. Essas palavras nos lembram que os amigos, mais do que companheiros temporais, são parceiros de jornada evolutiva.</p>
+    <p>Como bem disse Emmanuel no livro Antologia da Amizade, psicografado por Chico Xavier: “Somos todos irmãos ante a Providência Divina, interligados no trabalho do dia-a-dia em função de nosso aperfeiçoamento mútuo”. Essas palavras nos lembram que os amigos, mais do que companheiros temporais, são parceiros de jornada evolutiva.</p>
 
     <h2>Laços que Transcendem Vidas</h2>
-    <p>Durante nossa breve passagem pela Terra, encontramos diversas almas. Algumas são conhecidas e outras não, mas algumas dessas almas tornam-se nossos amigos. Um amigo pode ter estado conosco em várias encarnações, talvez até como um antigo desafeto. O espiritismo nos ensina que a morte apenas rompe temporariamente os laços afetivos. Quando os espíritos retornam ao plano espiritual, reencontram-se como amigos que voltaram de uma longa viagem.
+    <p>Durante nossa breve passagem pela Terra, encontramos diversas almas. Algumas são conhecidas e outras não, mas algumas dessas almas tornam-se nossos amigos. Um amigo pode ter estado conosco em várias encarnações, talvez até como um antigo desafeto. O espiritismo nos ensina que a morte apenas rompe temporariamente os laços afetivos. Quando os espíritos retornam ao plano espiritual, reencontram-se como amigos que voltaram de uma longa viagem.</p>
 
-É comum, em relatos espíritas, ouvirmos sobre pessoas que sonham com parentes ou amigos desencarnados, que lhes trazem avisos ou conselhos. Nossos amigos no plano espiritual continuam a nos proteger, dentro das possibilidades que lhes são permitidas.
+    <p>É comum, em relatos espíritas, ouvirmos sobre pessoas que sonham com parentes ou amigos desencarnados, que lhes trazem avisos ou conselhos. Nossos amigos no plano espiritual continuam a nos proteger, dentro das possibilidades que lhes são permitidas.</p>
 
-De acordo com Emmanuel, no livro O Consolador (pergunta 174), “a amizade sincera é o oásis de repouso para o caminheiro da vida, em sua jornada de aperfeiçoamento.”</p>
-    
+    <p>De acordo com Emmanuel, no livro O Consolador (pergunta 174), “a amizade sincera é o oásis de repouso para o caminheiro da vida, em sua jornada de aperfeiçoamento.”</p>
+
     <h2>A Importância do Perdão nos Relacionamentos</h2>
-    <p>Em relação à amizade, também precisamos compreender que ela envolve compreensão e perdão. No livro O Livro dos Espíritos, na questão 290, é explicado que amigos e parentes podem se reencontrar após a morte, mas isso depende de sua evolução espiritual. Se um espírito avançar mais rapidamente, pode haver um distanciamento temporário. Contudo, eventualmente, todos os laços se restabelecem quando ambos alcançam o mesmo nível evolutivo.
+    <p>Em relação à amizade, também precisamos compreender que ela envolve compreensão e perdão. No livro O Livro dos Espíritos, na questão 290, é explicado que amigos e parentes podem se reencontrar após a morte, mas isso depende de sua evolução espiritual. Se um espírito avançar mais rapidamente, pode haver um distanciamento temporário. Contudo, eventualmente, todos os laços se restabelecem quando ambos alcançam o mesmo nível evolutivo.</p>
 
-O Evangelho segundo o Espiritismo nos ensina que é muito mais agradável estar com um amigo do que com um inimigo. E isso é algo que vivemos diariamente. Se não estivermos no caminho do perdão, antigos desafetos podem trazer grandes desafios para nossa caminhada.
+    <p>O Evangelho segundo o Espiritismo nos ensina que é muito mais agradável estar com um amigo do que com um inimigo. E isso é algo que vivemos diariamente. Se não estivermos no caminho do perdão, antigos desafetos podem trazer grandes desafios para nossa caminhada.</p>
 
-Jesus nos aconselhou a nos reconciliarmos rapidamente com nossos adversários, e esse conselho vale não só para esta vida, mas para as futuras encarnações. Resolver nossos conflitos é essencial para evitar que eles se repitam em novas vidas.</p>
+    <p>Jesus nos aconselhou a nos reconciliarmos rapidamente com nossos adversários, e esse conselho vale não só para esta vida, mas para as futuras encarnações. Resolver nossos conflitos é essencial para evitar que eles se repitam em novas vidas.</p>
 
     <h2>Amizades que se Transformam</h2>
-    <p>Com o passar do tempo, amizades podem se transformar. Melhores amigos de hoje podem se tornar apenas conhecidos amanhã. O grupo de 10 amigos pode se reduzir a 5, e 5 podem se transformar em 2. Se não cultivarmos nossas amizades, corremos o risco de nos deparar com a solidão.
+    <p>Com o passar do tempo, amizades podem se transformar. Melhores amigos de hoje podem se tornar apenas conhecidos amanhã. O grupo de 10 amigos pode se reduzir a 5, e 5 podem se transformar em 2. Se não cultivarmos nossas amizades, corremos o risco de nos deparar com a solidão.</p>
 
-Em Toques da Vida, Cornélio Pires, por meio da psicografia de Chico Xavier, nos aconselha sabiamente: “Num grupo de bons amigos, se algum deles te magoa, esquece em favor dos outros, entrega a Deus e perdoa”.</p>
+    <p>Em Toques da Vida, Cornélio Pires, por meio da psicografia de Chico Xavier, nos aconselha sabiamente: “Num grupo de bons amigos, se algum deles te magoa, esquece em favor dos outros, entrega a Deus e perdoa”.</p>
 
     <h2>O Cultivo da Amizade Verdadeira</h2>
-    <p>No livro Sinal Verde, André Luiz, também através de Chico Xavier, nos diz: “O amigo é uma bênção que nos cabe cultivar no clima da gratidão. Quem diz que ama e não procura compreender, auxiliar, amparar ou servir, ainda não saiu de si mesmo ao encontro do amor em alguém.”
+    <p>No livro Sinal Verde, André Luiz, também através de Chico Xavier, nos diz: “O amigo é uma bênção que nos cabe cultivar no clima da gratidão. Quem diz que ama e não procura compreender, auxiliar, amparar ou servir, ainda não saiu de si mesmo ao encontro do amor em alguém.”</p>
 
-A verdadeira amizade enxerga além dos defeitos. Amar o amigo é aceitar suas imperfeições e continuar a caminhada juntos. Somente vencemos o egoísmo em nós quando nos decidimos a ajudar nossos amigos a encontrar sua própria felicidade, independentemente de nossas expectativas.
+    <p>A verdadeira amizade enxerga além dos defeitos. Amar o amigo é aceitar suas imperfeições e continuar a caminhada juntos. Somente vencemos o egoísmo em nós quando nos decidimos a ajudar nossos amigos a encontrar sua própria felicidade, independentemente de nossas expectativas.</p>
 
-Precisamos reconhecer que nossos amigos têm seus próprios pensamentos e que suas escolhas não precisam ser iguais às nossas. A verdadeira felicidade na amizade reside no bem-estar daqueles que amamos. Assim como esperamos ser aceitos como somos, devemos aceitar nossos amigos do jeito que são.
+    <p>Precisamos reconhecer que nossos amigos têm seus próprios pensamentos e que suas escolhas não precisam ser iguais às nossas. A verdadeira felicidade na amizade reside no bem-estar daqueles que amamos. Assim como esperamos ser aceitos como somos, devemos aceitar nossos amigos do jeito que são.</p>
 
-<p>Conforme Jesus nos ensinou a amar até mesmo nossos inimigos, quanto mais amor devemos oferecer aos que nos entregam o coração?</p>
+    <p>Conforme Jesus nos ensinou a amar até mesmo nossos inimigos, quanto mais amor devemos oferecer aos que nos entregam o coração?</p>
 
     <footer>
         <p>&copy; 2024 mundo.espirita. Todos os direitos reservados.</p>
