--- a/textos.html
+++ b/textos.html
@@ -143,6 +143,11 @@
                 <div class="accordion-title" onclick="toggleAccordion('texto4', 'perdao.html')">Perdão</div>
                 <div class="accordion-content" id="texto4"></div>
             </div>
+	    <div class="accordion">
+                <div class="accordion-title" onclick="toggleAccordion('texto5', 'mediunidade.html')">Mediunidade</div>
+                <div class="accordion-content" id="texto4"></div>
+            </div>
+
 
         </div>
     </section>
