--- a/textos.html
+++ b/textos.html
@@ -122,7 +122,7 @@
     <section id="textos">
         <div class="content">
             <h2>Textos</h2>
-            <p>Seja bem-vindo ao mundo.espirita! Aqui compartilho reflexões sobre espiritualidade, autoconhecimento e o impacto do Espiritismo em nossas vidas. A cada texto, espero trazer luz e inspiração para que possamos trilhar juntos um caminho de evolução.</p>
+            <p>Seja bem-vindo ao Mundo Espírita! Aqui compartilho reflexões sobre espiritualidade, autoconhecimento e o impacto do Espiritismo em nossas vidas. A cada texto, espero trazer luz e inspiração para que possamos trilhar juntos um caminho de evolução.</p>
             
             <div class="accordion">
                 <div class="accordion-title" onclick="toggleAccordion('texto1', 'amizade.html')">Amizade</div>
@@ -145,7 +145,7 @@
             </div>
 	    <div class="accordion">
                 <div class="accordion-title" onclick="toggleAccordion('texto5', 'mediunidade.html')">Mediunidade</div>
-                <div class="accordion-content" id="texto4"></div>
+                <div class="accordion-content" id="texto5"></div>
             </div>
 
 
