--- a/videos.html
+++ b/videos.html
@@ -67,7 +67,7 @@
 <body>
 
     <header>
-        <h1>Mundo Espírita</h1>
+        <h1>mundo.espirita</h1>
     </header>
 
     <nav>
@@ -90,6 +90,11 @@
 
                 <p><strong>Vídeo 3:</strong> Reflexão sobre alma gêmea.</p>
                 <iframe src="https://www.youtube.com/embed/WqP5J461C24?si=JY34UZL4UCHAaWck" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+
+ 		<p><strong>Vídeo 4:</strong> Reflexão sobre perdão.</p>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/hZozS0NUC4Y?si=sCBEFeASxldQVjun" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
             </div>
         </div>
     </section>
