--- a/mediunidade.html
+++ b/mediunidade.html
@@ -1,1 +1,80 @@
-Em produção (breve)
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Perdão - Mundo Espírita</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif; /* Fonte padrão */
+            background-color: #f8f8f8; /* Cor de fundo suave */
+            color: #333; /* Texto em cinza escuro para melhor contraste */
+            margin: 0;
+            padding: 20px; /* Adiciona um pouco de espaçamento */
+        }
+        h1 {
+            font-size: 3em; /* Tamanho do título principal maior */
+            margin-bottom: 20px; /* Espaçamento abaixo do título */
+            color: #007BFF; /* Cor do título */
+            text-align: center; /* Centraliza o título */
+            font-weight: bold; /* Deixa o título principal em negrito */
+        }
+        h2 {
+            font-size: 2em; /* Tamanho dos subtítulos maior */
+            margin-top: 30px; /* Espaçamento acima do subtítulo */
+            color: #000; /* Cor preta para os subtítulos */
+            font-weight: bold; /* Deixa os subtítulos em negrito */
+        }
+        p {
+            line-height: 1.6; /* Aumenta o espaçamento entre linhas */
+            margin-bottom: 20px; /* Espaçamento abaixo de cada parágrafo */
+            text-align: justify; /* Justifica o texto */
+            letter-spacing: 0.5px; /* Aumenta o espaçamento entre letras */
+        }
+        footer {
+            margin-top: 40px; /* Espaçamento acima do rodapé */
+            text-align: center; /* Centraliza o texto do rodapé */
+            font-size: 0.9em; /* Tamanho da fonte do rodapé */
+            color: #666; /* Cor do texto do rodapé */
+        }
+    </style>
+</head>
+<body>
+    <h1>Mediunidade</h1>
+
+    <h2>Introdução</h2>
+    <p>Os Espíritos se manifestam hoje em todos os pontos da Terra, e a mediunidade se revela em pessoas de todas as idades e condições, sejam homens, mulheres, crianças ou idosos. Além do mundo material que conhecemos, existe o mundo invisível, que não pode ser acessado pelos sentidos físicos ou instrumentos convencionais. Para nos conectar a esse plano espiritual, Deus concedeu ao homem a mediunidade, uma capacidade natural de perceber e interagir com o invisível. Mas o que é a mediunidade, e qual o seu verdadeiro propósito? Vamos explorar isso juntos.</p>
+
+    <h2>O que é a Mediunidade?</h2>
+    <p>A mediunidade é a capacidade de algumas pessoas de se comunicarem com o mundo espiritual ou de perceberem realidades além dos sentidos físicos. Ela é uma disposição orgânica, uma habilidade natural que qualquer pessoa pode ter, assim como a capacidade de ver, ouvir ou falar. No entanto, é importante lembrar que o abuso dessa capacidade — ou de qualquer outra — traz consequências, pois Deus, embora permita a liberdade, também impõe justiça.</p>
+
+    <h2>Exemplo Prático</h2>
+    <p>Imagine uma pessoa que começa a ouvir vozes ou sentir presenças ao seu redor. Isso pode ser assustador no início, mas, com estudo e orientação, ela pode aprender a discernir se essas manifestações são de espíritos benevolentes ou não. Um exemplo clássico é o de Chico Xavier, que, desde criança, via e ouvia espíritos, mas só mais tarde, com o estudo da doutrina espírita, aprendeu a usar sua mediunidade para ajudar milhares de pessoas através da psicografia.</p>
+
+    <h2>Tipos de Mediunidade</h2>
+    <p>A mediunidade pode se manifestar de diversas formas. Alguns médiuns são capazes de escrever mensagens dos espíritos, como no caso da psicografia. Outros ouvem vozes (clariaudiência), veem espíritos (clarividência) ou sentem suas presenças e emoções (mediunidade de sensibilidade). Há ainda aqueles que falam em nome dos espíritos (psicofonia) ou curam através da energia espiritual (mediunidade de cura). Cada tipo de mediunidade é um instrumento para auxiliar no bem coletivo.</p>
+
+    <h2>O Papel do Médium</h2>
+    <p>Ser médium não significa necessariamente ter uma conexão constante ou privilegiada com espíritos superiores. A mediunidade é um dom gratuito concedido por Deus, e o médium é como um intérprete dos espíritos, uma ponte entre o mundo espiritual e o material. O objetivo desse dom é instruir, consolar e guiar as pessoas em direção ao bem e à fé. As mensagens transmitidas pelos médiuns não são fruto de suas próprias ideias, mas vêm dos espíritos, e o médium é apenas o instrumento.</p>
+
+    <h2>Cuidados e Desafios</h2>
+    <p>No entanto, a mediunidade não é algo que se possa controlar ou explorar como uma atividade profissional. Ela depende da vontade dos espíritos e exige preparo moral e espiritual. Um médium despreparado pode atrair espíritos menos evoluídos, que buscam influenciar negativamente. Por isso, é essencial estudar, praticar a caridade e manter uma conduta moral elevada. A mediunidade é uma missão de amor e serviço, e não um meio de lucro ou status.</p>
+
+    <h2>A Importância da Conduta Moral</h2>
+    <p>Um médium verdadeiramente bom é aquele que busca se melhorar moralmente, cultivando virtudes como humildade, bondade e sinceridade. Essas qualidades atraem a assistência dos espíritos superiores, que desejam ajudar e orientar. Por outro lado, a mediunidade usada para benefício próprio ou com más intenções pode se tornar um fardo, afastando os bons espíritos e atraindo influências negativas.</p>
+
+    <h2>Exemplo Prático</h2>
+    <p>Um caso famoso é o de Divaldo Franco, que sempre enfatiza a importância da humildade e do estudo na prática mediúnica. Ele costuma dizer que a mediunidade é como um telefone: se a linha estiver ruim, a comunicação falha. Da mesma forma, se o médium não estiver em sintonia com os bons espíritos, as mensagens podem ser distorcidas ou até mesmo prejudiciais.</p>
+
+    <h2>A Mediunidade como Missão de Caridade</h2>
+    <p>A mediunidade é um dom divino dado para o bem da humanidade, e não para benefício pessoal. Ela não deve ser comercializada, pois é um recurso espiritual que deve estar acessível a todos, independentemente de sua condição financeira. A comparação com o trabalho do médico ou do magnetizador é interessante: enquanto esses profissionais podem cobrar por seus serviços, o médium curador não tem o direito de vender sua capacidade, pois está apenas canalizando a energia divina dos espíritos. Jesus e os apóstolos, mesmo sendo pobres, curavam e ajudavam sem cobrar nada.</p>
+
+    <h2>Conclusão</h2>
+    <p>Em resumo, a mediunidade é um dom divino, concedido por Deus como uma ferramenta para conectar o mundo material ao espiritual, visando o bem coletivo e a evolução moral da humanidade. Ela não é um privilégio pessoal, mas uma missão de caridade, amor e orientação, que deve ser exercida com pureza de intenção, humildade e responsabilidade. O verdadeiro valor de um médium não reside na facilidade de comunicação com os espíritos, mas na sua conduta moral e na sintonia com os espíritos superiores, que buscam o bem e a elevação espiritual.</p>
+
+    <footer>
+        <p>&copy; 2024 mundo.espirita. Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
