--- a/mediunidade.html
+++ b/mediunidade.html
@@ -14,14 +14,14 @@
             padding: 20px; /* Adiciona um pouco de espaçamento */
         }
         h1 {
-            font-size: 3em; /* Tamanho do título principal maior */
+            font-size: 2.8em; /* Tamanho do título principal ligeiramente menor */
             margin-bottom: 20px; /* Espaçamento abaixo do título */
             color: #007BFF; /* Cor do título */
             text-align: center; /* Centraliza o título */
             font-weight: bold; /* Deixa o título principal em negrito */
         }
         h2 {
-            font-size: 2em; /* Tamanho dos subtítulos maior */
+            font-size: 2em; /* Tamanho dos subtítulos */
             margin-top: 30px; /* Espaçamento acima do subtítulo */
             color: #000; /* Cor preta para os subtítulos */
             font-weight: bold; /* Deixa os subtítulos em negrito */
@@ -50,7 +50,7 @@
     <p>A mediunidade é a capacidade de algumas pessoas de se comunicarem com o mundo espiritual ou de perceberem realidades além dos sentidos físicos. Ela é uma disposição orgânica, uma habilidade natural que qualquer pessoa pode ter, assim como a capacidade de ver, ouvir ou falar. No entanto, é importante lembrar que o abuso dessa capacidade — ou de qualquer outra — traz consequências, pois Deus, embora permita a liberdade, também impõe justiça.</p>
 
     <h2>Exemplo Prático</h2>
-    <p>Imagine uma pessoa que começa a ouvir vozes ou sentir presenças ao seu redor. Isso pode ser assustador no início, mas, com estudo e orientação, ela pode aprender a discernir se essas manifestações são de espíritos benevolentes ou não. Um exemplo clássico é o de Chico Xavier, que, desde criança, via e ouvia espíritos, mas só mais tarde, com o estudo da doutrina espírita, aprendeu a usar sua mediunidade para ajudar milhares de pessoas através da psicografia.</p>
+    <p>Imagine uma pessoa que começa a ouvir vozes ou sentir presenças ao seu redor. Isso pode ser assustador no início, mas, com estudo e orientação, ela pode aprender a discernir se essas manifestações são de espíritos benevolentes ou não. Um exemplo clássico é o de Chico Xavier, que, desde criança, via e ouvia espíritos. Apesar das dificuldades que enfrentou, ele usou sua mediunidade para psicografar mensagens de consolo, amor e orientação para milhares de pessoas, sempre com humildade e dedicação aos ensinamentos espíritas.</p>
 
     <h2>Tipos de Mediunidade</h2>
     <p>A mediunidade pode se manifestar de diversas formas. Alguns médiuns são capazes de escrever mensagens dos espíritos, como no caso da psicografia. Outros ouvem vozes (clariaudiência), veem espíritos (clarividência) ou sentem suas presenças e emoções (mediunidade de sensibilidade). Há ainda aqueles que falam em nome dos espíritos (psicofonia) ou curam através da energia espiritual (mediunidade de cura). Cada tipo de mediunidade é um instrumento para auxiliar no bem coletivo.</p>
@@ -63,9 +63,6 @@
 
     <h2>A Importância da Conduta Moral</h2>
     <p>Um médium verdadeiramente bom é aquele que busca se melhorar moralmente, cultivando virtudes como humildade, bondade e sinceridade. Essas qualidades atraem a assistência dos espíritos superiores, que desejam ajudar e orientar. Por outro lado, a mediunidade usada para benefício próprio ou com más intenções pode se tornar um fardo, afastando os bons espíritos e atraindo influências negativas.</p>
-
-    <h2>Exemplo Prático</h2>
-    <p>Um caso famoso é o de Divaldo Franco, que sempre enfatiza a importância da humildade e do estudo na prática mediúnica. Ele costuma dizer que a mediunidade é como um telefone: se a linha estiver ruim, a comunicação falha. Da mesma forma, se o médium não estiver em sintonia com os bons espíritos, as mensagens podem ser distorcidas ou até mesmo prejudiciais.</p>
 
     <h2>A Mediunidade como Missão de Caridade</h2>
     <p>A mediunidade é um dom divino dado para o bem da humanidade, e não para benefício pessoal. Ela não deve ser comercializada, pois é um recurso espiritual que deve estar acessível a todos, independentemente de sua condição financeira. A comparação com o trabalho do médico ou do magnetizador é interessante: enquanto esses profissionais podem cobrar por seus serviços, o médium curador não tem o direito de vender sua capacidade, pois está apenas canalizando a energia divina dos espíritos. Jesus e os apóstolos, mesmo sendo pobres, curavam e ajudavam sem cobrar nada.</p>
