--- a/textos.html
+++ b/textos.html
@@ -148,6 +148,10 @@
                 <div class="accordion-content" id="texto5"></div>
             </div>
 
+	    <div class="accordion">
+                <div class="accordion-title" onclick="toggleAccordion('texto56, 'EvangelhodoLar.html')">Mediunidade</div>
+                <div class="accordion-content" id="texto5"></div>
+            </div>
 
         </div>
     </section>
