--- a/textos.html
+++ b/textos.html
@@ -149,7 +149,7 @@
             </div>
 
 	    <div class="accordion">
-                <div class="accordion-title" onclick="toggleAccordion('texto56, 'EvangelhodoLar.html')">Mediunidade</div>
+                <div class="accordion-title" onclick="toggleAccordion('texto56, 'EvangelhodoLar.html')">EvangelhodoLar</div>
                 <div class="accordion-content" id="texto5"></div>
             </div>
 
