--- a/textos.html
+++ b/textos.html
@@ -86,12 +86,14 @@
             // Se não estiver visível, carregar o texto e mostrar
             if (!isVisible) {
                 loadText(id, filename);
+                content.style.display = "block"; // Mostrar o conteúdo
+                content.scrollIntoView({ behavior: 'smooth' }); // Rolar para o conteúdo
+            } else {
+                content.style.display = "none"; // Esconder o conteúdo
             }
-            content.style.display = isVisible ? "none" : "block"; // Alterna a visibilidade
         }
 
         function loadText(id, filename) {
-            console.log(`Carregando o texto de: ${filename}`);
             fetch(filename)
                 .then(response => {
                     if (!response.ok) {
@@ -143,13 +145,14 @@
                 <div class="accordion-title" onclick="toggleAccordion('texto4', 'perdao.html')">Perdão</div>
                 <div class="accordion-content" id="texto4"></div>
             </div>
-	    <div class="accordion">
+
+            <div class="accordion">
                 <div class="accordion-title" onclick="toggleAccordion('texto5', 'mediunidade.html')">Mediunidade</div>
                 <div class="accordion-content" id="texto5"></div>
             </div>
 
-	    <div class="accordion">
-                <div class="accordion-title" onclick="toggleAccordion('texto6, 'evangelho.html')">Evangelho do Lar</div>
+            <div class="accordion">
+                <div class="accordion-title" onclick="toggleAccordion('texto6', 'evangelho.html')">Evangelho do Lar</div>
                 <div class="accordion-content" id="texto6"></div>
             </div>
 
@@ -162,4 +165,5 @@
 
 </body>
 </html>
+
 
