--- a/perdao.html
+++ b/perdao.html
@@ -7,67 +7,67 @@
     <title>Perdão - Mundo Espírita</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif; /* Fonte padrão */
-            background-color: #f8f8f8; /* Cor de fundo suave */
-            color: #333; /* Texto em cinza escuro para melhor contraste */
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f8f8;
+            color: #333;
             margin: 0;
-            padding: 20px; /* Adiciona um pouco de espaçamento */
+            padding: 20px;
         }
         h1 {
-            font-size: 2.5em; /* Tamanho do título */
-            margin-bottom: 20px; /* Espaçamento abaixo do título */
-            color: #007BFF; /* Cor do título */
-            text-align: center; /* Centraliza o título */
+            font-weight: bold;
+            letter-spacing: 0.05em;
+            font-size: 2.5em;
+            text-align: center;
+            margin-bottom: 20px;
+            color: #007BFF; /* Cor azul para o título principal */
+        }
+        h2, h3 {
+            font-weight: bold;
+            letter-spacing: 0.05em;
+            margin-top: 30px;
+            color: #000000; /* Cor preta para os subtítulos */
+        }
+        h2 {
+            font-size: 2em;
+        }
+        h3 {
+            font-size: 1.5em;
         }
         p {
-            line-height: 1.6; /* Aumenta o espaçamento entre linhas */
-            margin-bottom: 20px; /* Espaçamento abaixo de cada parágrafo */
-            text-align: justify; /* Justifica o texto */
+            line-height: 1.6;
+            margin-bottom: 20px;
+            text-align: justify;
         }
         footer {
-            margin-top: 40px; /* Espaçamento acima do rodapé */
-            text-align: center; /* Centraliza o texto do rodapé */
-            font-size: 0.9em; /* Tamanho da fonte do rodapé */
-            color: #666; /* Cor do texto do rodapé */
+            margin-top: 40px;
+            text-align: center;
+            font-size: 0.9em;
+            color: #666;
         }
     </style>
 </head>
 <body>
-    <h1>Perdão</h1>
-    <p>
-        <b>O Perdão no Evangelho de Jesus</b>  
-        <p>Então, Pedro chegou perto de Jesus e perguntou:
-        — Senhor, quantas vezes devo perdoar o meu irmão que peca contra mim? Sete vezes?
-        — Não! — respondeu Jesus. — Você não deve perdoar sete vezes, mas setenta e sete vezes.</p>
-        Esse ensinamento, extraído dos Evangelhos, é um dos mais poderosos convites ao perdão que Jesus nos oferece. Ele não estabelece limites para a prática do perdão, nos mostrando que o verdadeiro caminho da evolução espiritual está na capacidade de perdoar infinitamente.
-    </p>
-    <p> <b>A Visão Espírita sobre o Perdão</b> </p>
-    <p>Chico Xavier, em sua profunda sabedoria, disse:
-        "No meu ponto de vista, a virtude mais difícil de ser posta em prática é a do perdão; perdoar exige um esforço de autossuperação muito grande."
-        Essa reflexão revela a complexidade do perdão, uma prática que nos desafia a vencer o ego e a mágoa para alcançarmos a verdadeira paz interior. No Livro dos Espíritos, aprendemos que amar os inimigos significa perdoá-los e retribuir o mal com o bem. Agindo assim, nos elevamos espiritualmente, enquanto a vingança nos coloca numa posição inferior, alimentando o orgulho.
-    Existem, no entanto, duas maneiras distintas de perdoar:
-        A primeira, genuinamente generosa, evita ferir o outro e é feita com humildade e sinceridade. A segunda é condicional e carregada de orgulho, onde o perdão é oferecido de forma ostensiva, para que todos vejam a "generosidade" de quem perdoa. Nesse segundo caso, o perdão não traz a verdadeira reconciliação, pois falta nele a nobreza de espírito.
-    </p>
-    <p>
-         <p><b>A Relevância do Perdão nas Reencarnações</b>  
- <p>Segundo o Evangelho Segundo o Espiritismo, nossas reencarnações estão ligadas ao que ainda não foi resolvido. Muitas vezes, os Espíritos vingativos seguem carregando ódio e rancor mesmo após a morte, buscando vingança contra aqueles que consideram inimigos.
-        Esse é o motivo pelo qual Jesus nos aconselha a nos reconciliarmos com nossos adversários enquanto estamos vivos. Ele sabia que a morte não dissolve o ódio. Um inimigo na Terra pode se tornar um amigo no mundo espiritual, se o perdão for praticado com sinceridade e humildade. Perdoar agora é garantir paz não só nesta vida, mas também nas futuras.
-    </p>
-    <p>
-         <p><b>Praticando o Perdão no Dia a Dia</b> 
- <p>Na questão 918 do Livro dos Espíritos, Kardec destaca as características do homem de bem, dentre elas, o perdão incondicional, a exemplo de Jesus, que perdoava as ofensas e se concentrava apenas nas boas ações. No livro Perdão e Vida, encontramos um conselho poderoso:
-        "Sempre que o mal te visite, pede a Deus te conceda a coragem de perdoar."
-        O perdão, segundo o Espiritismo, não é um ato de fraqueza, mas uma verdadeira manifestação de força interior. É por meio do perdão que rompemos as correntes do ódio e abrimos espaço para a cura e a reconciliação, tanto nesta vida quanto nas próximas. Jesus nos lembra:
-        "Porque se vocês perdoarem as pessoas que ofenderem vocês, o Pai de vocês, que está no céu, também perdoará vocês. Mas, se não perdoarem essas pessoas, o Pai de vocês também não perdoará as ofensas de vocês."
-    </p>
-    <p>
-        Portanto, devemos refletir: se somos duros e inflexíveis diante das ofensas, como podemos esperar o perdão divino? A prática constante do perdão é essencial para nossa evolução espiritual.
-    </p>
-    <p>
-        <b>Conclusão</b>
- <p> O Perdão como Caminho para a Paz Vemos que o perdão é uma chave essencial para nossa libertação espiritual. Não se trata apenas de libertar o outro, mas de nos livrarmos de ressentimentos que nos aprisionam e impedem nosso progresso. Quando Jesus nos convida a perdoar "setenta vezes sete", Ele nos chama a uma prática constante de indulgência, amor e compreensão.
-        Perdoar é, de fato, um ato de força, e ao fazê-lo, nos aproximamos de Deus e da verdadeira paz interior. Que possamos, em nossa jornada, escolher o perdão como caminho para a nossa redenção e para a harmonia universal. Afinal, foi com o perdão que Jesus nos deu o maior exemplo de amor, até mesmo na cruz. E que, com esse exemplo, possamos transformar nossas relações e, principalmente, nossa alma.
-    </p>
+    <h1>O Perdão no Evangelho de Jesus</h1>
+    <p>Quantas vezes você já se viu preso ao ressentimento, incapaz de perdoar alguém que o feriu? E quantas vezes percebeu que, ao perdoar, encontrou alívio e paz interior? O perdão é um dos temas mais profundos e transformadores ensinados por Jesus, e sua prática é essencial para nossa evolução espiritual.</p>
+    <p>Certa vez, Pedro chegou perto de Jesus e perguntou: “Senhor, quantas vezes devo perdoar o meu irmão que peca contra mim? Sete vezes?” Jesus respondeu: “Não! Você não deve perdoar sete vezes, mas setenta e sete vezes.” (Mateus 18:21-22). Esse ensinamento não estabelece limites para o perdão, mas nos convida a uma prática constante e infinita. Perdoar não é apenas um ato de bondade para com o outro, mas um caminho de libertação para nós mesmos.</p>
+
+    <h2>A Visão Espírita sobre o Perdão</h2>
+    <p>Chico Xavier, com sua profunda sabedoria, disse: “No meu ponto de vista, a virtude mais difícil de ser posta em prática é a do perdão; perdoar exige um esforço de autossuperação muito grande.” Essa reflexão revela a complexidade do perdão, uma prática que nos desafia a vencer o ego e a mágoa para alcançarmos a verdadeira paz interior.</p>
+    <p>No Livro dos Espíritos, aprendemos que amar os inimigos significa perdoá-los e retribuir o mal com o bem. Agindo assim, nos elevamos espiritualmente, enquanto a vingança nos coloca numa posição inferior, alimentando o orgulho. No entanto, o perdão pode acontecer de duas formas distintas:</p>
+    Perdão Genuíno: Feito com humildade e sinceridade, evita ferir o outro e busca a reconciliação verdadeira.</p>
+    Perdão Condicional:Carregado de orgulho, é oferecido de forma ostensiva, para que todos vejam a "generosidade" de quem perdoa. Nesse caso, falta a nobreza de espírito, e o perdão não traz a verdadeira cura.</p>
+
+    <h2>A Relevância do Perdão nas Reencarnações</h2>
+    <p>Segundo O Evangelho Segundo o Espiritismo, nossas reencarnações estão ligadas ao que ainda não foi resolvido. Muitas vezes, os Espíritos vingativos seguem carregando ódio e rancor mesmo após a morte, buscando vingança contra aqueles que consideram inimigos. Esse é o motivo pelo qual Jesus nos aconselha a nos reconciliarmos com nossos adversários enquanto estamos vivos. Ele sabia que a morte não dissolve o ódio. Um inimigo na Terra pode se tornar um amigo no mundo espiritual, se o perdão for praticado com sinceridade e humildade.</p>
+    <p>Perdoar agora é garantir paz não só nesta vida, mas também nas futuras. Como nos ensina o Espiritismo, o perdão é uma ponte que nos conecta à harmonia universal e à evolução espiritual.</p>
+
+    <h2>Praticando o Perdão no Dia a Dia</h2>
+    <p>Na questão 918 de O Livro dos Espíritos, Kardec destaca as características do homem de bem, dentre elas, o perdão incondicional, a exemplo de Jesus, que perdoava as ofensas e se concentrava apenas nas boas ações. No livro Perdão e Vida, encontramos um conselho poderoso: “Sempre que o mal te visite, pede a Deus te conceda a coragem de perdoar.”</p>
+    <p>O perdão, segundo o Espiritismo, não é um ato de fraqueza, mas uma verdadeira manifestação de força interior. É por meio dele que rompemos as correntes do ódio e abrimos espaço para a cura e a reconciliação, tanto nesta vida quanto nas próximas. Jesus nos lembra: “Porque se vocês perdoarem as pessoas que ofenderem vocês, o Pai de vocês, que está no céu, também perdoará vocês. Mas, se não perdoarem essas pessoas, o Pai de vocês também não perdoará as ofensas de vocês.” (Mateus 6:14-15).</p>
+
+    <h2>Conclusão: O Perdão como Caminho para a Paz</h2>
+    <p>O perdão é uma chave essencial para nossa libertação espiritual. Não se trata apenas de libertar o outro, mas de nos livrarmos de ressentimentos que nos aprisionam e impedem nosso progresso. Quando Jesus nos convida a perdoar “setenta vezes sete”, Ele nos chama a uma prática constante de indulgência, amor e compreensão.</p>
+    <p>Perdoar é, de fato, um ato de força, e ao fazê-lo, nos aproximamos de Deus e da verdadeira paz interior. Que tal, hoje mesmo, refletir sobre alguém que você precisa perdoar? Dê o primeiro passo, mesmo que seja pequeno, e permita que o perdão transforme sua vida. Afinal, foi com o perdão que Jesus nos deu o maior exemplo de amor, até mesmo na cruz. E que, com esse exemplo, possamos transformar nossas relações e, principalmente, nossa alma.</p>
 
     <footer>
         <p>&copy; 2024 mundo.espirita. Todos os direitos reservados.</p>
